[package]
name = "state-fold"
license = "Apache-2.0"
version = "0.1.0"
authors = ["Cartesi Team"]
homepage = "https://cartesi.io"
edition = "2018"

[dependencies]
offchain-utils = { git = "https://github.com/cartesi/offchain-utils", rev = "bcab565" }

structopt = "0.3"
serde = "1.0.0"

async-trait = "0.1"
futures = "0.3"
snafu = "0.6"
tokio = { version = "^1.5", features = ["sync"] }

[dev-dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "4690f8e" }
offchain-utils = { git = "https://github.com/cartesi/offchain-utils", rev = "bcab565" }

serde_json = "1.0"
tokio = { version = "^1.5", features = ["macros"] }

[build-dependencies]
offchain-utils = { git = "https://github.com/cartesi/offchain-utils", rev = "bcab565" }
