[workspace]
resolver = "2"
members = [
  # Core crates (in dependency order)
  "state-fold-types",
  "block-history",
  "state-fold",

  # gRPC crates
  "state-server-common",
  "state-client-lib",
  "state-server-lib",

  # Internal
  "state-fold-test",
]

[workspace.package]
version = "0.7.0"

authors = [
  "Gabriel Coutinho de Paula <gcdepaula@protonmail.io>",
  "Roman Hodulák <hodulakr@gmail.com>",
]
description = "An Ethereum reader library"
edition = "2021"
homepage = "https://github.com/cartesi/state-fold"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/cartesi/state-fold"



[workspace.dependencies]
eth-state-fold-types = { version = "0.7", path = "state-fold-types" }
eth-block-history = { version = "0.7", path = "block-history" }
eth-state-fold = { version = "0.7", path = "state-fold" }
eth-state-server-common = { version = "0.7", path = "state-server-common" }
eth-state-fold-test = { version = "*", path = "state-fold-test" }

ethabi = "18"
ethers = "1.0"

anyhow = "1"
async-recursion = "1"
async-stream = "0.3"
async-trait = "0.1"
clap = "4.2"
futures = "0.3"
hex = "0.4"
proc-macro2 = "1"
prost = "0.11"
quote = "1"
serde = "1"
serde_json = "1"
snafu = "0.7"
tokio = "1"
tokio-stream = "0.1"
toml = "0.5"
tonic = "0.9"
tonic-build = "0.9"
tonic-health = "0.9"
tracing = "0.1"
