[package]
name = "eth-block-history"
license = "Apache-2.0"
version = "0.7.0"
authors = ["Gabriel Coutinho de Paula <gabriel.coutinho@cartesi.io>"]
homepage = "https://cartesi.io"
edition = "2021"

[dependencies]
eth-state-fold-types = { workspace = true, features = ["ethers"] }

snafu = { workspace = true }
clap = { features = ["derive", "env"] , workspace = true }

async-stream = { workspace = true }
tokio = { features = ["sync", "macros"] , workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }


[dev-dependencies]
eth-state-fold-test = { workspace = true }

async-trait = "0.1"
tokio = { version = "1", features = ["macros"] }
