[package]
name = "eth-block-history"

license = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }


[dependencies]
eth-state-fold-types = { workspace = true, features = ["ethers"] }

snafu = { workspace = true }
clap = { features = ["derive", "env"] , workspace = true }

async-stream = { workspace = true }
tokio = { features = ["sync", "macros"] , workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }


[dev-dependencies]
eth-state-fold-test = { workspace = true }

async-trait = "0.1"
tokio = { version = "1", features = ["macros"] }
