[package]
name = "eth-block-history"
version = { workspace = true }

authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license-file = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }


[dependencies]
eth-state-fold-types = { workspace = true, features = ["ethers"] }

snafu = { workspace = true }
clap = { features = ["derive", "env"] , workspace = true }

async-stream = { workspace = true }
tokio = { features = ["sync", "macros"] , workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }


[dev-dependencies]
eth-state-fold-test = { workspace = true }

async-trait = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
