[package]
name = "state-fold-examples"
version = "0.1.1"
authors = ["Cartesi Team"]
homepage = "https://cartesi.io"
edition = "2018"

# delegate example
[[bin]]
name = "delegate_example"
path = "src/delegate_example.rs"

# delegate client example
[[bin]]
name = "delegate_client_example"
path = "src/delegate_client_example.rs"

# delegate server example
[[bin]]
name = "delegate_server_example"
path = "src/delegate_server_example.rs"

[dependencies]
block-subscriber = { git = "https://github.com/cartesi/offchain-utils", tag = "v0.1.0" }
middleware-factory = { git = "https://github.com/cartesi/offchain-utils", tag = "v0.1.0" }
offchain-core = { git = "https://github.com/cartesi/offchain-utils", tag = "v0.1.0" }
state-fold = { path = "../state-fold" }
state-server-grpc = { path = "../state-server-grpc" }

async-trait = "0.1"
ethers = { version = "0.5.3", features = [ "ws" ] }
futures = "0.3"
im = "15.0"
serde = "1.0.0"
serde_json = "1.0"
snafu = "0.6"
tokio = { version = "^1.5", features = ["sync"] }
tonic = "0.4"

[build-dependencies]
offchain-utils = { git = "https://github.com/cartesi/offchain-utils", tag = "v0.1.0" }
