[package]
name = "eth-state-client-lib"
license = "Apache-2.0"
version = "0.6.3"
authors = ["Gabriel Coutinho de Paula <gabriel.coutinho@cartesi.io>"]
homepage = "https://cartesi.io"
edition = "2021"

[dependencies]
eth-state-fold-types = { workspace = true, features = ["ethers"] }
eth-state-server-common = { workspace = true, features = ["server"] }

async-trait = { workspace = true }
tonic = { workspace = true }
tokio = { features = ["sync"] , workspace = true }
tokio-stream = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
clap = { features = ["derive", "env"] , workspace = true }
