[package]
name = "eth-state-client-lib"

license = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }


[dependencies]
eth-state-fold-types = { workspace = true, features = ["ethers"] }
eth-state-server-common = { workspace = true, features = ["server"] }

async-trait = { workspace = true }
tonic = { workspace = true }
tokio = { features = ["sync"] , workspace = true }
tokio-stream = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
clap = { features = ["derive", "env"] , workspace = true }
