[package]
name = "eth-state-fold-test"
license = "Apache-2.0"
version = "0.6.3"
authors = ["Gabriel Coutinho de Paula <gabriel.coutinho@cartesi.io>"]
homepage = "https://cartesi.io"
edition = "2021"
publish = false

[dependencies]
eth-state-fold-types = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { features = ["sync"] , workspace = true }

[build-dependencies]
eth-state-fold-types = { workspace = true, features = ["ethers"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
proc-macro2 = { workspace = true }
