[package]
name = "eth-state-fold-test"
publish = false

license = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }


[dependencies]
eth-state-fold-types = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { features = ["sync"] , workspace = true }

[build-dependencies]
eth-state-fold-types = { workspace = true, features = ["ethers"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
proc-macro2 = { workspace = true }
