[package]
name = "eth-state-fold-types"
license = "Apache-2.0"
version = "0.7.0"
authors = ["Gabriel Coutinho de Paula <gabriel.coutinho@cartesi.io>"]
homepage = "https://cartesi.io"
edition = "2021"

[dependencies]
serde = { workspace = true }
ethers = { optional = true, features = ["ws", "abigen", "rustls"] , workspace = true }
ethabi = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
snafu = { workspace = true }
