[package]
name = "eth-state-fold-types"
version = { workspace = true }

authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license-file = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }


[dependencies]
serde = { workspace = true }
ethers = { optional = true, features = ["ws", "abigen", "rustls"] , workspace = true }
ethabi = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
snafu = { workspace = true }
