[package]
name = "eth-state-fold"

license = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }


[dependencies]
eth-state-fold-types = { workspace = true, features = ["ethers"] }
eth-block-history = { workspace = true }

snafu = { workspace = true }
clap = { features = ["derive", "env"] , workspace = true }

async-recursion = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { features = ["sync"] , workspace = true }


[dev-dependencies]
eth-state-fold-test = { workspace = true }
tokio = { version = "^1.5", features = ["macros"] }
matches = "0.1"
