[package]
name = "eth-state-fold"
version = { workspace = true }

authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license-file = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }


[dependencies]
eth-state-fold-types = { workspace = true, features = ["ethers"] }
eth-block-history = { workspace = true }

snafu = { workspace = true }
clap = { features = ["derive", "env"] , workspace = true }

async-recursion = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { features = ["sync"] , workspace = true }


[dev-dependencies]
eth-state-fold-test = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
