[package]
name = "eth-state-server-common"
license = "Apache-2.0"
version = "0.7.0"
authors = ["Gabriel Coutinho de Paula <gabriel.coutinho@cartesi.io>"]
homepage = "https://cartesi.io"
edition = "2021"
include = [
    "build.rs",
    "**/*.rs",
    "Cargo.toml",
    "grpc-interfaces/*.proto"
]

[features]
default = ["client"]
server = []
client = []

[dependencies]
eth-state-fold-types = { workspace = true }

prost = { workspace = true }
tonic = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }


[build-dependencies]
tonic-build = { workspace = true }
anyhow = { workspace = true }
