[package]
name = "eth-state-server-common"

include = [
    "build.rs",
    "**/*.rs",
    "Cargo.toml",
    "grpc-interfaces/*.proto"
]

license = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }


[features]
default = ["client"]
server = []
client = []


[dependencies]
eth-state-fold-types = { workspace = true }

prost = { workspace = true }
tonic = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }


[build-dependencies]
tonic-build = { workspace = true }
anyhow = { workspace = true }
