[package]
name = "eth-state-server-common"
version = { workspace = true }

include = [
    "build.rs",
    "**/*.rs",
    "Cargo.toml",
    "grpc-interfaces/*.proto"
]

authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license-file = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }


[features]
default = ["client"]
server = []
client = []


[dependencies]
eth-state-fold-types = { workspace = true }

prost = { workspace = true }
tonic = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }


[build-dependencies]
tonic-build = { workspace = true }
anyhow = { workspace = true }
