[package]
name = "state-server-grpc"
version = "0.1.0"
authors = ["Marcelo Castellani <marcelo@linux.com>"]
edition = "2018"

[dependencies]
tonic = "^0.5.2"
prost = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal", "sync"] }
tonic-health = "^0.4.1"

[build-dependencies]
tonic-build = "^0.5.2"
