[package]
name = "eth-state-server-lib"
license = "Apache-2.0"
version = "0.6.3"
authors = ["Gabriel Coutinho de Paula <gabriel.coutinho@cartesi.io>"]
homepage = "https://cartesi.io"
edition = "2021"

[dependencies]
eth-block-history = { workspace = true }
eth-state-server-common = { workspace = true, features = ["server"] }
eth-state-fold = { workspace = true }
eth-state-fold-types = { workspace = true }

futures = "0.3"
tonic = "0.8"
tonic-health = "0.7"
tokio = { version = "1", features = ["sync", "signal"] }
tokio-stream = "0.1"
tracing = "0.1"
serde = "1"
serde_json = "1"
snafu = "0.7"
clap = { version = "4.1", features = ["derive", "env"] }
