[package]
name = "eth-state-server-lib"
license = "Apache-2.0"
version = "0.7.0"
authors = ["Gabriel Coutinho de Paula <gabriel.coutinho@cartesi.io>"]
homepage = "https://cartesi.io"
edition = "2021"

[dependencies]
eth-block-history = { workspace = true }
eth-state-server-common = { workspace = true, features = ["server"] }
eth-state-fold = { workspace = true }
eth-state-fold-types = { workspace = true }

futures = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
tokio = { features = ["sync", "signal"] , workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
clap = { features = ["derive", "env"] , workspace = true }
